--- a/README
+++ b/README
@@ -1,6 +1,4 @@
-Project Skeleton for the cloudrover app.
-
-You should find in this directory:
+Project CloudRover
 
 README : this file
 Makefile : simple make commands
@@ -12,24 +10,8 @@ start.sh : simple startup script for running cloudrover
 /src
   /cloudrover_app.erl : base module for the Erlang application
   /cloudrover_sup.erl : OTP supervisor for the application
-  /cloudrover_resource.erl : a simple example Webmachine resource
+  /cloudrover_resource.erl : a Webmachine resource
 /priv
   /dispatch.conf : the Webmachine URL-dispatching table
   /www : a convenient place to put your static web content
 
-You probably want to do one of a couple of things at this point:
-
-0. Build the skeleton application:
-   $ make
-   - or -
-   $ ./rebar compile
-
-1. Start up the skeleton application:
-   $ ./start.sh
-
-2. Change the basic application:
-   edit src/cloudrover_resource.erl
-
-3. Add some new resources:
-   edit src/YOUR_NEW_RESOURCE.erl
-   edit priv/dispatch.conf
